--- a/index.html
+++ b/index.html
@@ -1,43 +1,33 @@
-<!DOCTYPE html>
-<html lang="es">
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/style.css">
-    <title>Gatos en adopción</title>
+  <meta charset="utf-8">
+  <title>Tarea3</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="style/style.css">
+  <script src="/app.js" defer></script>  
+
 </head>
 <body>
     <header>
-        <h1>Gatos en adopción</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Página principal</a></li>
-                <li><a href="tabla.html">Nuestros gatos</a></li>
-                <li><a href="donde.html">Donde estamos</a></li>
-                <li><a href="formulario.html">Formulario</a></li>
-            </ul>
-        </nav>
+        <h1 class="page-title">Gatos en adopción</h1>
+      <nav>
+        <ul>
+          <li><a href="#" onclick="loadSection('about')">Página principal</a></li>
+          <li><a href="#" onclick="loadSection('cats')">Nuestros gatos</a></li>
+          <li><a href="#" onclick="loadSection('location')">Dónde estamos</a></li>
+          <li><a href="#" onclick="loadSection('adoptionForm')">Formulario</a></li>
+        </ul>
+      </nav>
     </header>
-
-    <section>
-        <h2>Sobre la agencia</h2>
-        <p>
-            Bienvenido a nuestra agencia de adopción de gatos. Somos un equipo comprometido con el bienestar de los felinos que han sido rescatados de situaciones difíciles. Nuestra principal misión es encontrarles hogares amorosos y responsables donde puedan vivir felices, saludables y rodeados de cariño. Nos esforzamos cada día para asegurar que cada gato reciba la atención y el cuidado que merece, hasta que encuentre a su familia definitiva.
-            <br>
-            Contamos con un proceso de adopción sencillo y transparente, basado en el respeto por los animales y el compromiso de los adoptantes. Antes de que un gato sea puesto en adopción, realizamos una evaluación detallada de su salud y comportamiento para asegurarnos de que sea una buena coincidencia con su futuro hogar. Además, ofrecemos asesoramiento y soporte post-adopción, para garantizar que tanto el gato como la familia se adapten bien a su nueva vida juntos.        
-        </p>
-    </section>
-
-    <section>
-        <h3>Video de nuestros gatos</h3>
-        <p>Mire un video de algunos de nuestros adorables gatos:</p>
-
-        <video src="src/videos/video1.mp4" controls width="600">
-        </video>
-    </section>
-
+    <main>
+        <h1 id="titleContent"></h1>
+        <div id="sectionContent"></div>
+    </main>
     <footer>
-        <p>&copy; 2025 Gatos en adopción</p>
+      <p>&copy; 2025 Gatos en adopción</p>
     </footer>
 </body>
 </html>
